--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.66.5",
+    "antd": "^5.24.1",
     "axios": "^1.7.9",
     "jwt-decode": "^4.0.0",
     "next": "15.1.7",
-    "next-pwa": "^5.6.0",
+    "next-pwa": "^2.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.3"
